<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbg"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_logo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailfield"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:autofillHints="email address"
        android:background="@drawable/formbg"
        android:drawableEnd="@drawable/mailicon"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:paddingTop="0dp"
        android:paddingRight="30dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagline"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/passwordfield"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:background="@drawable/formbg"
        android:drawableEnd="@drawable/lockicon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:paddingTop="0dp"
        android:paddingRight="30dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailfield"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="360dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/secolor"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        app:cornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordfield"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/tnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tnc"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tnclink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tnclink"
        android:textColor="@color/secolor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/tnc"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>